Features  Add targeted features

--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -52,9 +52,18 @@ Tracker bug: <https://bugzilla.redhat.com/show_bug.cgi?id=ovirt-node-2.7>
 
 Features being considered for inclusion/already in master:
 
-*   New TUI installer
 *   Universal image
 *   New upgrade tool
-*   ...
+*   Software iSCSI support
+*   Puppet configuration management
+*   Swap enhancements
+*   TUI
+    -   New installer
+    -   IPv6 support
+    -   Diagnostics page
+*   Compatibility
+    -   Fedora 18
+    -   Fedora 19 (targeted, once it's released)
+    -   EL-6
 
 <Category:Node> <Category:Releases> [Category:Release management](Category:Release management)
