Features  Notes about what is open

--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -55,15 +55,15 @@ Features being considered for inclusion/already in master:
 *   Universal image
 *   New upgrade tool
 *   Software iSCSI support
-*   Puppet configuration management
-*   Swap enhancements
+*   Puppet configuration management (*open*)
+*   Swap enhancements (*open*, partially)
 *   TUI
     -   New installer
-    -   IPv6 support
+    -   IPv6 support (*open*)
     -   Diagnostics page
 *   Compatibility
     -   Fedora 18
-    -   Fedora 19 (targeted, once it's released)
+    -   Fedora 19 (*targeted*, once it's released)
     -   EL-6
 
 <Category:Node> <Category:Releases> [Category:Release management](Category:Release management)
