--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -14,11 +14,11 @@ wiki_last_updated: 2013-06-14
 
 *' These are tentative planning dates and may change*'
 
-*   General availability: **TBD**
-    -   Beta release: **TBD**
-    -   Feature freeze: **TBD**
+*   General availability: 2013-05-31
+    -   Beta release: 2013-05-02
+    -   Feature freeze: 2013-05-02
     -   Test Day: **TBD**
-    -   RC Build: **TBD**
+    -   RC Build: 2013-05-15
 
 ## Tracker Bug
 
