--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -53,7 +53,7 @@ Tracker bug: <https://bugzilla.redhat.com/show_bug.cgi?id=ovirt-node-3.0>
 Features being considered for inclusion/already in master:
 
 *   [Features/Universal Image](Features/Universal Image)
-*   New upgrade tool
+*   [Features/Node upgrade tool](Features/Node upgrade tool)
 *   Software iSCSI support
 *   Puppet configuration management (*open*)
 *   Swap enhancements (*open*, partially)
