--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -54,7 +54,7 @@ Features being considered for inclusion/already in master:
 
 *   [Features/Universal Image](Features/Universal Image)
 *   [Features/Node upgrade tool](Features/Node upgrade tool)
-*   Software iSCSI support
+*   [Features/Node software iscsi root](Features/Node software iscsi root)
 *   Puppet configuration management (*open*)
 *   Swap enhancements (*open*, partially)
 *   TUI
