--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -59,7 +59,7 @@ Features being considered for inclusion/already in master:
 *   Swap enhancements (*open*, partially)
 *   TUI
     -   New installer
-    -   IPv6 support (*open*)
+    -   [Features/Node ipv6 support](Features/Node ipv6 support)(*open*)
     -   Diagnostics page
 *   Compatibility
     -   Fedora 18
