Link to New Installer feature

--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -58,7 +58,7 @@ Features being considered for inclusion/already in master:
 *   Puppet configuration management (*open*)
 *   Swap enhancements (*open*, partially)
 *   TUI
-    -   New installer
+    -   [ Features/New installer](Features/Urwid TUI)
     -   [Features/Node ipv6 support](Features/Node ipv6 support)(*open*)
     -   Diagnostics page
 *   Compatibility
