--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -55,7 +55,7 @@ Features being considered for inclusion/already in master:
 *   [Features/Universal Image](Features/Universal Image)
 *   [Features/Node upgrade tool](Features/Node upgrade tool)
 *   [Features/Node software iscsi root](Features/Node software iscsi root)
-*   Puppet configuration management (*open*)
+*   [ Puppet configuration management (*open*)](Features/Node Puppet Plugin)
 *   Swap enhancements (*open*, partially)
 *   TUI
     -   [ Features/New installer](Features/Urwid TUI)
