--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -60,7 +60,7 @@ Features being considered for inclusion/already in master:
 *   TUI
     -   [ Features/New installer](Features/Urwid TUI)
     -   [Features/Node ipv6 support](Features/Node ipv6 support)(*open*)
-    -   Diagnostics page
+    -   [ Diagnostics page](Features/Node Diagnostic Page)
 *   Compatibility
     -   Fedora 18
     -   Fedora 19 (*targeted*, once it's released)
