--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -55,11 +55,11 @@ Features being considered for inclusion/already in master:
 *   [Features/Universal Image](Features/Universal Image)
 *   [Features/Node upgrade tool](Features/Node upgrade tool)
 *   [Features/Node software iscsi root](Features/Node software iscsi root)
-*   [ Puppet configuration management (*open*)](Features/Node Puppet Plugin)
-*   Swap enhancements (*open*, partially)
+*   [ Puppet configuration management](Features/Node Puppet Plugin)
+*   Swap enhancements (deferred to 3.1)
 *   TUI
     -   [ Features/New installer](Features/Urwid TUI)
-    -   [Features/Node ipv6 support](Features/Node ipv6 support)(*open*)
+    -   [Features/Node ipv6 support](Features/Node ipv6 support) (deferred to 3.1)
     -   [ Diagnostics page](Features/Node Diagnostic Page)
 *   Compatibility
     -   Fedora 18
