Features  IPv6 is making it!

--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -59,7 +59,7 @@ Features being considered for inclusion/already in master:
 *   Swap enhancements (deferred to 3.1)
 *   TUI
     -   [ Features/New installer](Features/Urwid TUI)
-    -   [Features/Node ipv6 support](Features/Node ipv6 support) (deferred to 3.1)
+    -   [Features/Node ipv6 support](Features/Node ipv6 support)
     -   [ Diagnostics page](Features/Node Diagnostic Page)
 *   Compatibility
     -   Fedora 18
