--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -57,6 +57,7 @@ Features being considered for inclusion/already in master:
 *   [Features/Node software iscsi root](Features/Node software iscsi root)
 *   [ Puppet configuration management](Features/Node Puppet Plugin)
 *   Swap enhancements (deferred to 3.1)
+*   [ Bridgeless Networking](Node/Features/Bridgeless Networking)
 *   TUI
     -   [ Features/New installer](Features/Urwid TUI)
     -   [Features/Node ipv6 support](Features/Node ipv6 support)
