Features  Add nic bonding feature

--- a/source/node/3.0-release-management.html.md
+++ b/source/node/3.0-release-management.html.md
@@ -58,6 +58,7 @@ Features being considered for inclusion/already in master:
 *   [ Puppet configuration management](Features/Node Puppet Plugin)
 *   Swap enhancements (deferred to 3.1)
 *   [ Bridgeless Networking](Features/Node/Bridgeless Networking)
+*   [ NIC Bonding](Features/Node/NIC Bonding)
 *   TUI
     -   [ Features/New installer](Features/Urwid TUI)
     -   [Features/Node ipv6 support](Features/Node ipv6 support)
