Features  Add LiveMedia/Oz

--- a/source/node/3.1-release-management.html.md
+++ b/source/node/3.1-release-management.html.md
@@ -53,6 +53,7 @@ Tracker bug: <https://bugzilla.redhat.com/show_bug.cgi?id=ovirt-node-3.1>
 Features being considered for inclusion/already in master:
 
 *   [Features/Node/PackageRefactoring](Features/Node/PackageRefactoring) - To meet the new demands of imagfac and friends.
+*   [Features/Node/BuildtoolMigration](Features/Node/BuildtoolMigration) - Investigate the migration to LiveMedia or Oz
 *   [Features/Node/StorageAndInstallerModuleRewrite](Features/Node/StorageAndInstallerModuleRewrite) - Rewrite the storage and installer module to make them testable.
 *   [Features/Node/OpenVSwitchSupport](Features/Node/OpenVSwitchSupport) - Support OpenVSwitch.
 *   [Features/Node/PluginLiveInstall](Features/Node/PluginLiveInstall) - To allow instalation of plugins at runtime.
