--- a/source/feature/i18n.html.md
+++ b/source/feature/i18n.html.md
@@ -1,142 +1,56 @@
 ---
 title: I18N
 category: feature
-authors: tjelinek
+authors: boh.ricky
 wiki_category: Feature
-wiki_title: Features/I18N
-wiki_revision_count: 14
-wiki_last_updated: 2012-05-02
+wiki_title: Features/Node/I18N
+wiki_revision_count: 1
+wiki_last_updated: 2013-10-10
 ---
 
-# I18N support
+# i18N
 
 ### Summary
 
-This feature will allow using non English characters as properties of entities (e.g. Tag name).
+This feature will allow ovirt node TUI support i18n.
 
 ### Owner
 
-*   Name: [ TJelinek](User:TJelinek)
+*   Name: [ Ricky](User:Boh.ricky)
 
 <!-- -->
 
-*   Email: <tjelinek@redhat.com>
+*   Email: bohai AT huawei DOT com
+*   IRC: Boh.ricky
 
 ### Current status
 
-*   VDSM, API, Installer prepared to be tested
-*   Engine prepared to be tested
-*   Frontend (Webadmin and UserPortal) prepared to be tested
+*   Status: **Done**
+*   Last updated: ,
 
-### Scope
+### Detailed Description
 
-Not all fields supports non-ASCII characters. The reason is, that some fields are stored to storage domains. VDSM already supports UTF for storage domain, but only for storage domain level 3. However, oVirt Engine does not support storage domain level 3 yet.
+Allow ovirt node TUI support i18n( now only support English and Chinese).
 
-There are two categories of fields which are stored in storage domain. Those, which are stored directly and those, which are stored as part of OVF(Open Virtualization Format) files. None of them can contain non-ASCII chars. This fields are:
+### Benefit to oVirt
 
-*   fields saved in storage domain
-    -   Host name/address
-    -   Network name
-    -   Domain name/description
-    -   Data Center name/description
-    -   Volume/image description
-    -   NFS Storage Export Path
-*   Fields which are part of OVF
-    -   VM name
-    -   VM description
-    -   Template name
-    -   Template description
-    -   Snapshot Description
-    -   Storage Domain Name
-    -   Disk Alias/Description
+Makes ovirt node more friendly to the users who's mother language is not English.
 
-One field which directly belongs to none of the categories above but can not contain non-ASCII chars is the VM Pool name. The reason is that the VM Pool name determines the VM name, so it has to be treated the same way as VM Name which is stored in OVF.
+### Dependencies / Related Features
 
-All other fields supports non-ASCII chars
+*   Affected Packages
+    -   ovirt-node
 
-# Components Involved
+### Testing
 
-### VDSM
+Cover all pages.
 
-VDSM already supports storage domain level3. For storage domain level3 it supports also UTF. As mentioned above, oVirt Engine does not support storage domain level3, so the fields mentioned above are out of the scope of this feature.
+### Documentation / External references
 
-VDSM is I18N prepared.
+### Comments and Discussion
 
-### API
+This below adds a link to the "discussion" tab associated with your page. This provides the ability to have ongoing comments or conversation without bogging down the main feature page
 
-Does not do any validation - it fully relies on engine.
+*   Refer to [Talk: Ovirt Node I18N](Talk: Ovirt Node I18N)
 
-It means that API is I18N prepared.
-
-### Installer
-
-It is I18N prepared. Fields which are validated:
-
-*   host address
-*   domain location
-
-Fields which are not validated but are dangerous:
-
-*   DB password
-*   admin password
-
-### Webadmin, Userportal-gwtp
-
-Fields which are not validated should work out of the box. Following a table which enumerates the fields which are validated.
-
-| Field                   | Model           | Webadmin UI field                                                      | User Portal (GWTP one) UI field                                                   | Supports non-ASCII |
-|-------------------------|-----------------|------------------------------------------------------------------------|-----------------------------------------------------------------------------------|--------------------|
-| Tag Name                | TagModel        | Tags->new/edit->Name                                                 | NONE                                                                              | yes                |
-| Bookmark Name           | BookmarkModel   | Bookmarks->new/edit->Name                                            | NONE                                                                              | yes                |
-| Bookmars Search String  | BookmarkModel   | Bookmarks->new/edit->Search string                                   | NONE                                                                              | yes                |
-| Data Center Name        | DataCenterModel | Data Center->new/edit->Name                                          | NONE                                                                              | no                 |
-| Data Center Description | DataCenterModel | Data Center->new/edit->Description                                   | NONE                                                                              | no                 |
-| Cluster Name            | ClusterModel    | Clusters->new/edit->General->Name                                   | NONE                                                                              | yes                |
-| Host Address            | HostModel       | Hosts->new/edit->General->Address                                   | NONE                                                                              | no                 |
-| Host Name               | HostModel       | Hosts->new/edit->General->Name                                      | NONE                                                                              | no                 |
-| VM Name                 | UnitVmModel     | Virtual Machines->new server/new desktop/edit->General->Name        | Extended->Virtual Machines->new server/new desktop/edit->General->Name        | no                 |
-| Template Name           | UnitVmModel     | Template->edit->General->Name                                       | Extended->Template->edit->General->Name                                       | no                 |
-| VM Description          | UnitVmModel     | Virtual Machines->new server/new desktop/edit->General->Description | Extended->Virtual Machines->new server/new desktop/edit->General->Description | no                 |
-| Template Description    | UnitVmModel     | Template->edit->General->Description                                | Extended->Template->edit->General->Description                                | no                 |
-| VM Pool Name            | PoolModel       | Pool->edit->General->Description                                    | Extended->Virtual Machines->edit->General->Name                               | no                 |
-| VM Pool Description     | PoolModel       | Template->edit->General->Description                                | Extended->Virtual Machines->edit->General->Description                        | yes                |
-| NFS Storage Export Path | NfsStorageModel | Storage->new/import->NFS->Export path                               | NONE                                                                              | no                 |
-| Storage Domain Name     | StorageModel    | Storage->new/import/edit->Description                                | NONE                                                                              | no                 |
-| Snapshot Description    | SnapshotModel   | Virtual Machines->Snapshot->create->Description                     | Extended->Virtual Machines->Snapshot->create->Description                     | no                 |
-| Disk Alias              | DiskModel       | Virtual Machines->Virtual Disks->add->Alias                         | Extended->Virtual Machines->Virtual Disks->add->Alias                         | no                 |
-
-### Engine
-
-Fields which are not validated should work out of the box. Following a table which enumerates the fields which are validated.
-
-| Field                   | Entity                                           | Supports non-ASCII |
-|-------------------------|--------------------------------------------------|--------------------|
-| Tag Name                | tags.name                                        | yes                |
-| Bookmark Name           | bookmarks.name                                   | yes                |
-| Bookmars Search String  | bookmarks.value                                  | yes                |
-| Data Center Name        | storage_pool.name                               | no                 |
-| Data Center Description | storage_pool.name                               | no                 |
-| Cluster Name            | VDSGroup.name                                    | yes                |
-| Host Address            | VdsStatic.ip                                     | no                 |
-| Host Name               | VdsStatic.name                                   | no                 |
-| VM Name                 | VmStatic.name                                    | no                 |
-| Template Name           | VmTemplate.name                                  | no                 |
-| VM Description          | VmBase.description                               | no                 |
-| Template Description    | VmBase.description                               | no                 |
-| VM Pool Name            | VmStatic.name                                    | no                 |
-| VM Pool Description     | VmBase.description                               | yes                |
-| NFS Export Patch        | storage_server_connections.connection          | no                 |
-| Storage Domain Name     | storage_domain_static.name                     | no                 |
-| Snapshot Description    | CreateAllSnapshotsFromVmParameters._description | no                 |
-| Disk Alias              | Disk.diskDescription                             | no                 |
-
-# Documentation / External references
-
-*   BZ of the feature: <https://bugzilla.redhat.com/show_bug.cgi?id=786448>
-*   BZ where the VDSM part was discussed: <https://bugzilla.redhat.com/show_bug.cgi?id=567077>
-
-# Comments and Discussion
-
-*   Refer to <Talk:I18N>
-
-<Category:Feature> <Category:Template>
+<Category:Feature> <Category:Template> <Category:Node>
